Latex rendering test

--- a/notebooks/Hedgecraft.ipynb
+++ b/notebooks/Hedgecraft.ipynb
@@ -1694,10 +1694,10 @@
     "\n",
     "A useful represention of &thinsp;$G$&thinsp; is the *adjacency matrix*:\n",
     "\n",
-    "<p><center>$A_{ij} = \\begin{cases} \n",
+    "<center>$A_{ij} = \\begin{cases} \n",
     "      1, & \\text{if} \\ i \\ \\text{is adjacent to} \\ j \\  \\\\\n",
     "      0, & \\text{otherwise}\n",
-    "   \\end{cases}$</center></p>\n",
+    "   \\end{cases}$</center>\n",
     "    \n",
     "Here the pairwise relations are expressed as the $ij$ entries of an $N \\times N$ matrix where $N$ is the number of nodes. In what follows, the adjacency matrix becomes a critical instrument of our asset allocation algorithm. **Our strategy is to transform the historical pricing data into a graph with edges weighted by the correlations between each stock.** Once the time series data is in this form, we use graph centrality measures and graph algorithms to obtain the desired allocation weights. To construct the weighted graph we adopt the winner-take-all method presented by [Tse, *et al*. (2010)](http://cktse.eie.polyu.edu.hk/pdf-paper/JoEF-1009.pdf) with a few modifications. (See [Stock Correlation Network](https://en.wikipedia.org/wiki/Stock_correlation_network) for a summary.) Our workflow in this section is as follows.\n",
     "\n",
