Latex rendering text

--- a/notebooks/Hedgecraft.ipynb
+++ b/notebooks/Hedgecraft.ipynb
@@ -1694,26 +1694,30 @@
     "\n",
     "A useful represention of &thinsp;$G$&thinsp; is the *adjacency matrix*:\n",
     "\n",
-    "<center>$$A_{ij} = \\begin{cases} \n",
+    "<center>$$\n",
+    "A_{ij} = \\begin{cases} \n",
     "      1, & \\text{if} \\ i \\ \\text{is adjacent to} \\ j \\  \\\\\n",
     "      0, & \\text{otherwise}\n",
-    "   \\end{cases}$$</center>\n",
+    "   \\end{cases}\n",
+    "$$</center>\n",
     "    \n",
     "Here the pairwise relations are expressed as the $ij$ entries of an $N \\times N$ matrix where $N$ is the number of nodes. In what follows, the adjacency matrix becomes a critical instrument of our asset allocation algorithm. **Our strategy is to transform the historical pricing data into a graph with edges weighted by the correlations between each stock.** Once the time series data is in this form, we use graph centrality measures and graph algorithms to obtain the desired allocation weights. To construct the weighted graph we adopt the winner-take-all method presented by [Tse, *et al*. (2010)](http://cktse.eie.polyu.edu.hk/pdf-paper/JoEF-1009.pdf) with a few modifications. (See [Stock Correlation Network](https://en.wikipedia.org/wiki/Stock_correlation_network) for a summary.) Our workflow in this section is as follows.\n",
     "\n",
     "1. We compute the *distance correlation matrix* $\\rho_{D}(X_{i}, X_{j})$ for the ``Open``, ``High``, ``Low``, ``Close``, and ``Close_diff`` time series.\n",
     "2. We use the NetworkX module to transform each distance correlation matrix into a weighted graph.\n",
     "3. We adopt the winner-take-all method and remove edges with correlations below a threshold value of $\\rho_{c} = 0.33$,\n",
+    "\n",
     "<br/><br/>\n",
     "<center>$$C_{ij} = \\begin{cases} \n",
     "      \\rho_{D}(X_{i}, Y_{j}), & \\rho \\geq \\rho_{c}  \\\\\n",
     "      0, & \\text{otherwise}.\n",
     "   \\end{cases}$$</center>\n",
-    "<br/><br/>\n",
+    "\n",
     "4. We inspect the distribution of edges (the so-called degree distribution) for each network. The degree of a node is simply the number of connections it has to other nodes. Algebraically, the degree of the *i*th vertex is given as,\n",
+    "\n",
     "<br/><br/>\n",
     "<center>$$\\text{Deg}(i) = \\sum_{j=1}^{N}A_{ij}$$</center>\n",
-    "<br/><br/>\n",
+    "\n",
     "5. Finally, we build a master network by averaging over the edge weights of the ``Open``, ``High``, ``Low``, ``Close``, and ``Close_diff`` networks and derive the asset weights from its structure.\n",
     "\n",
     "## What on Earth is Distance Correlation and Why Should We Care?\n",
