fixed sneaky typo bug

--- a/notebooks/Hedgecraft.ipynb
+++ b/notebooks/Hedgecraft.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Hedgecraft Part 1: Building a Minimally Correlated Portfolio with Data Science\n",
     "\n",
-    "What is the optimal way of constructing a portfolio? A portfolio that (1) consistently generates wealth while minimizing potential losess and (2) is robust against large market fluctuations and economic downturns? I will explore these questions in some depth in a three-part ***Hedgecraft*** series. While the series is aimed at a technical audience, my intentions are to break the technical concepts down into digestible bit-sized pieces suitable for a general audience, institutional investors, and others alike. The approach documented in this notebook (to my knowledge) is novel. To this end, the penultimate goal of the project is an end-to-end FinTech/Portfolio Management product.\n",
+    "What is the optimal way of constructing a portfolio? A portfolio that (1) consistently generates wealth while minimizing potential lossess and (2) is robust against large market fluctuations and economic downturns? I will explore these questions in some depth in a three-part ***Hedgecraft*** series. While the series is aimed at a technical audience, my intentions are to break the technical concepts down into digestible bite-sized pieces suitable for a general audience, institutional investors, and others alike. The approach documented in this notebook (to my knowledge) is novel. To this end, the penultimate goal of the project is an end-to-end FinTech/Portfolio Management product.\n",
     "\n",
     "## Summary\n",
     "\n",
@@ -2998,7 +2998,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Amazon', 'UnitedHealth', 'Verizon', \"Mcdonald's\"]\n"
+      "['Verizon', 'UnitedHealth', 'Amazon', \"Mcdonald's\"]\n"
      ]
     }
    ],
@@ -3111,16 +3111,16 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Amazon</th>\n",
-       "      <td>310.35</td>\n",
+       "      <th>Verizon</th>\n",
+       "      <td>46.78</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>UnitedHealth</th>\n",
        "      <td>101.09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Verizon</th>\n",
-       "      <td>46.78</td>\n",
+       "      <th>Amazon</th>\n",
+       "      <td>310.35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Mcdonald's</th>\n",
@@ -3133,9 +3133,9 @@
       "text/plain": [
        "              Buy In: 2014-12-31\n",
        "Name                            \n",
-       "Amazon                    310.35\n",
-       "UnitedHealth              101.09\n",
        "Verizon                    46.78\n",
+       "UnitedHealth              101.09\n",
+       "Amazon                    310.35\n",
        "Mcdonald's                 93.70"
       ]
      },
@@ -3192,7 +3192,7 @@
       "{'3M': 0.011, 'Altaba': 0.105, 'Amazon': 0.019, 'American Express': 0.011, 'Apple': 0.044, 'Boeing': 0.014, 'Caterpillar': 0.012, 'Chevron': 0.012, 'Cisco Systems': 0.011, 'Coca-Cola': 0.013, 'Exxon Mobil': 0.012, 'General Electric': 0.011, 'Goldman Sachs': 0.013, 'Google': 0.014, 'Home Depot': 0.012, 'IBM': 0.011, 'Intel': 0.011, 'JPMorgan Chase': 0.011, 'Johnson & Johnson': 0.011, \"Mcdonald's\": 0.013, 'Merk': 0.02, 'Microsoft': 0.012, 'Nike': 0.013, 'Pfizer': 0.013, 'Procter & Gamble': 0.016, 'Travelers': 0.012, 'United Technologies': 0.011, 'UnitedHealth': 0.49, 'Verizon': 0.014, 'Walmart': 0.019, 'Walt Disney': 0.011}\n",
       "\n",
       "\n",
-      "{'Amazon': 0.035, 'UnitedHealth': 0.914, 'Verizon': 0.026, \"Mcdonald's\": 0.025}\n"
+      "{'Verizon': 0.026, 'UnitedHealth': 0.914, 'Amazon': 0.035, \"Mcdonald's\": 0.025}\n"
      ]
     }
    ],
@@ -3946,7 +3946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -4079,7 +4079,7 @@
     "# Hedgecraft MIS annualized volatility\n",
     "mis_portfolio_std_dev = mis_portfolio_std(\n",
     "    weights=mis_weights, \n",
-    "    test_data=df_validate, h\n",
+    "    test_data=df_validate,\n",
     "    maximum_independent_set=max_ind_set\n",
     ")\n",
     "\n",
@@ -4103,7 +4103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -4198,7 +4198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4346,7 +4346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -4426,7 +4426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -4483,7 +4483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4560,7 +4560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4613,7 +4613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "metadata": {
     "scrolled": false
    },
@@ -4700,7 +4700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "metadata": {
     "scrolled": true
    },
@@ -4791,7 +4791,7 @@
        "2017                       60.2%                           25.0%  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4816,7 +4816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "metadata": {
     "scrolled": false
    },
@@ -4889,7 +4889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -4969,7 +4969,7 @@
        "Growth-Risk Ratio                   3.33           4.32               0.69"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4994,7 +4994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5162,7 +5162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 70,
    "metadata": {
     "scrolled": false
    },
@@ -5229,7 +5229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 71,
    "metadata": {
     "scrolled": true
    },
@@ -5319,7 +5319,7 @@
        "Probability of falling bellow 90 day rolling avg                35.1%  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
